--- a/CardGames/en.lproj/MainStoryboard_iPad.storyboard
+++ b/CardGames/en.lproj/MainStoryboard_iPad.storyboard
@@ -629,7 +629,7 @@
             <objects>
                 <viewController id="4Xu-09-eyv" customClass="GameBoardViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="onV-JN-clO">
-                        <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
+                        <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="wooden_top.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="JxR-l6-V3H"/>
@@ -755,6 +755,7 @@
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <navigationItem key="navigationItem" id="xlM-ex-jb4"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="discardPile" destination="bGD-Uo-bZf" id="oYe-rb-JRs"/>
                         <outlet property="drawPile" destination="D3H-nl-5K5" id="GMn-aC-igE"/>
