--- a/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
@@ -294,7 +294,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="wooden_top.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="NlA-Ty-9oC"/>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85e-CY-pNg">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85e-CY-pNg" customClass="CenteredScrollView">
                                 <connections>
                                     <outlet property="delegate" destination="5YQ-yq-kIg" id="sYO-17-psw"/>
                                 </connections>
@@ -666,6 +666,9 @@ A preferences page is also available from the home screen. To get to this page, 
         <image name="wooden_top.jpg" width="600" height="361"/>
     </resources>
     <classes>
+        <class className="CenteredScrollView" superclassName="UIScrollView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CenteredScrollView.h"/>
+        </class>
         <class className="ChooseSuitViewController" superclassName="ViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ChooseSuitViewController.h"/>
             <relationships>
@@ -688,7 +691,7 @@ A preferences page is also available from the home screen. To get to this page, 
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="buttonLayout" candidateClass="UIView"/>
-                <relationship kind="outlet" name="cardHand" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="cardHand" candidateClass="CenteredScrollView"/>
                 <relationship kind="outlet" name="loadingPopup" candidateClass="UIView"/>
                 <relationship kind="outlet" name="loadingPopupTitle" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="overlay" candidateClass="UIView"/>
